--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "fogbugz-rs"
-version = "0.1.0"
-edition = "2021"
+name = "fogbugz-ox"
+version = "0.2.0"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -28,3 +28,4 @@ strum = { version = "0.25.0", features = ["derive"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 derivative = "2.2.0"
 serde_repr = "0.1.18"
+bon = "3.3"
